Fixed text alignment & updated homepage

--- a/potions/style.css
+++ b/potions/style.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Inter:400,500,600,700,800,900&display=swap');
 :root {
-    --background-color: #ffffff;
-    --text-color: #000000;
-    --highlight-color: #ffffba;
-    --border-color: #000000;
-}
-
-[data-theme="dark"] {
     --background-color: #191917;
     --text-color: #ffffff;
     --highlight-color: #57553d;
     --border-color: #5c5c5b;
+}
+
+[data-theme="light"] {
+    --background-color: #ffffff;
+    --text-color: #000000;
+    --highlight-color: #ffffba;
+    --border-color: #000000;
 }
 
 body {
@@ -18,6 +18,7 @@ body {
     font-weight: 500;
     background-color: var(--background-color);
     color: var(--text-color);
+    transition: ease 0.2s;
 }
 
 #themeButton {
@@ -32,11 +33,13 @@ body {
     display: flex;
     margin-bottom: 2%;
     width: 100%;
-    justify-content: center;
     align-items: center;
 }
 
 #favicon {
+    position: absolute;
+    right: 0;
+    left: 1rem;
     border-radius: 30%;
     width: 40px;
     height: 40px;
@@ -46,15 +49,15 @@ body {
 }
 
 .header h1 {
+    flex: 1;
     margin-top: .5%;
     text-align: center;
-    margin-left: auto;
 }
 
-.header img {
+.darkModeIcon {
+    position: absolute;
+    right: 1rem;
     margin-top: .5%;
-    margin-right: 1%;
-    margin-left: auto;
     justify-self: right;
     align-self: flex-start;
 }
