--- a/style.css
+++ b/style.css
@@ -1,10 +1,83 @@
+@import url('https://fonts.googleapis.com/css?family=Inter:400,500,600,700,800,900&display=swap');
+:root {
+    --background-color: #191917;
+    --text-color: #ffffff;
+    --highlight-color: #57553d;
+    --border-color: #5c5c5b;
+}
+
+[data-theme="light"] {
+    --background-color: #ffffff;
+    --text-color: #000000;
+    --highlight-color: #ffffba;
+    --border-color: #000000;
+}
+
+body {
+    font-family: "Inter", sans-serif;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    transition: ease 0.2s;
+}
+
+#themeButton {
+    cursor: pointer;
+    margin-left: auto;
+}
+
+.header {
+    display: flex;
+    margin-bottom: 2%;
+    width: 100%;
+    align-items: center;
+    text-align: center;
+}
+
+.header h1 {
+    flex: 1;
+    margin-top: .5%;
+    text-align: center;
+}
+
+.header img {
+    position: absolute;
+    right: 1rem;
+    margin-top: .5%;
+    margin-right: 1%;
+    align-self: flex-start;
+}
+
+.header p {
+    text-align: center;
+}
+
+
+.subheader {
+    text-align: center;
+}
+
+.utilitiesContainer {
+    display: flex;
+    justify-content: center;
+    margin: 0% 25%;
+}
+
 .previewBox {
     display: inline-block;
     text-align: center;
-    border: 4px solid black;
+    border: 4px solid var(--border-color);
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px 10px;
     cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.previewBox:hover {
+    transform: scale(1.15);
+}
+
+.previewBox p {
+    margin-bottom: 1pt;
 }
 
 .previewBox img {
